# jallery

./: LICENSE  README.md  pyproject.toml
jallery/: main.py
templates/: template.html
